[package]
name = "sobecca_os"
version = "0.1.0"
authors = ["Robson Fernandes <robson.santos@gscap.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
